Issue #2808313: Options to add  css class formatter for both fields

--- a/templates/reference-value-pair-formatter.html.twig
+++ b/templates/reference-value-pair-formatter.html.twig
@@ -6,6 +6,7 @@
  * Available variables:
  * - value: A collection of responsive image data.
  * - label: An optional URL the image can be linked to.
+ * - url: NULL
  *
  * @see template_preprocess_reference_value_pair_formatter()
  *
